k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop
  labels:
    app.kubernetes.io/part-of: workshop-service
